[package]
name = "wavefornt-aln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_warn"]}
simple_logger = "4.2.0"
